Fix friends page problem on table scrollbar and add link in the friend username
(to change the link with the correct url to the statistic page of the friend)

--- a/src/main/webapp/css/friend/friend.css
+++ b/src/main/webapp/css/friend/friend.css
@@ -45,6 +45,7 @@
 
 #listFriend{
     padding-top: 40px;
+    margin: auto;
 }
 
 #friendsTable{
@@ -55,4 +56,14 @@
 .playerStatus{
     display: none;
     margin-left: auto;
+}
+
+.friend-link {
+    color: black;
+    text-decoration: none;
+}
+
+.friend-link:hover {
+    color: #4e99e9;
+    font-weight: bold;
 }
